# prads

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  README.md
.claude/: CLAUDE.md
patches/: 0001-prads-vectorscan-pcre2.patch  0002-Update-Makefile.pfring-to-use-Vectorscan-PCRE2.patch
src/: Makefile  Makefile.pfring  assets.c  config.h  cxt.c  hs_engine.c  hs_engine.h  ndpi_engine.c  ndpi_engine.h  prads.c  prads.h
src/servicefp/: servicefp.c  servicefp.h  tcpc.c  tcps.c  udps.c
tools/: README.md  prads-asset-report2  prads2snort2  prads_utils.py
tools/nmap2prads/: README.md  exclude_gameservers.conf  include_services.conf  nmap2prads.py  passive-probes.conf  prads_signature_optimization.md  priority.conf
